examples/test/testpolicy5947.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5947
  namespace: namespace95
spec:
  podSelector:
    matchLabels:
      key26: value11
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key7: value6
          key46: value24
      podSelector:
        matchLabels:
          key22: value12
          key37: value31
